--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,28 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "server.js",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "server.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        },
-        
-        {
-            "src": "/upload",
-            "dest": "server.js"
-        },
-        {
-            "src": "/uploads",
-            "dest": "server.js"
-        },
-        {
-            "src": "/uploads/(.*)",
-            "dest": "server.js"
-        }
+      {
+        "src": "/uploads/(.*)",
+        "dest": "/uploads/$1"
+      },
+      {
+        "src": "/upload",
+        "dest": "/server.js"
+      },
+      {
+        "src": "/uploads",
+        "dest": "/server.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/server.js"
+      }
     ]
-}
+  }
+  
