--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^8.3.0",
     "@fastify/static": "^7.0.4",
+    "cors": "^2.8.5",
     "fastify": "^4.28.1",
+    "fastify-express": "^0.4.0",
     "fastify-multipart": "^5.4.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
