--- a/vercel.json
+++ b/vercel.json
@@ -9,9 +9,8 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "server.js"
         },
-        
         {
             "src": "/upload",
             "dest": "server.js"
@@ -21,7 +20,7 @@
             "dest": "server.js"
         },
         {
-            "src": "/uploads/$1",
+            "src": "/uploads/(.*)",
             "dest": "server.js"
         }
     ]
